--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -2,7 +2,7 @@
     <div class="ft_wrapper">
         <div class="ft_head">
             <div class="ft_logobox key_bg3">
-                <a href="#"><img class="ft_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo EcoIt"></a> 
+                <a href="{{path('home')}}"><img class="ft_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo EcoIt"></a> 
             </div>
         </div>
         <div class="ft_main">
