--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -18,10 +18,10 @@
         <a class="key_ftdw" href="">Contact</a>   
     </li>
     <li class="hd-li hd_home-li left font-f1 key_bg3">
-        <a class="nav_a key_ftdw" href="">S'incrire</a>           
+        <a class="nav_a key_ftdw" href="{{path('subscribe')}}">S'incrire</a>           
     </li><hr>
     <li class="hd-li hd_home-li right font-f1 key_bg3">
-        <a class="nav_a key_ftdw" href="">Connexion</a>              
+        <a class="nav_a key_ftdw" href="{{path('login')}}">Connexion</a>              
     </li>
 {% endblock %}
 
@@ -80,10 +80,14 @@
 
             <div class="home_btn-wrap">
                 <div class="home-btnbox">
-                    <button class="home-btn key_bg3 key_ftdw">S'incrire</button>
+                    <form action="{{path('subscribe')}}">
+                        <button class="home-btn key_bg3 key_ftdw" type="submit">S'incrire</button>
+                    </form>
                 </div>
                 <div class="home-btnbox">
-                    <button class="home-btn key_bg3 key_ftdw">Se connecter</button>
+                    <form action="{{path('login')}}">
+                        <button class="home-btn key_bg3 key_ftdw">Se connecter</button>
+                    </form>
                 </div>
             </div>
         </div>
