--- a/public/assets/scss/txt.scss
+++ b/public/assets/scss/txt.scss
@@ -89,7 +89,9 @@ $fontText: "Raleway", sans-serif;
 }
 
 .home_partner-title,
-.subscribe_h2 {
+.login_h2,
+.subscribe_h2,
+.apply_h2 {
   font-size: $fontSize_md;
 }
 
