--- a/public/assets/pages/apply.scss
+++ b/public/assets/pages/apply.scss
@@ -1,5 +1,4 @@
 $breakpoints: (
-  "small-phone": 300px,
   "phone": 500px,
   "tablet": 700px,
   "tablet-large": 900px,
@@ -9,9 +8,9 @@ $breakpoints: (
 
 section,
 form,
-.subscribe_wrapper,
-.subscribe_title,
-.subscribe_container,
+.apply_wrapper,
+.apply_title,
+.apply_container,
 .img-box,
 .form_box,
 .cancel_box {
@@ -19,12 +18,16 @@ form,
 }
 
 section,
-.subscribe_wrapper,
-.subscribe_title,
-.subscribe_container,
+.apply_wrapper,
+.apply_title,
+.apply_container,
 .img-box {
   justify-content: center;
   align-items: center;
+}
+
+form {
+  justify-content: center;
 }
 
 .cancel_box {
@@ -33,36 +36,37 @@ section,
 
 section,
 form,
-.subscribe_wrapper,
-.subscribe_container,
+.apply_wrapper,
+.apply_container,
 .img-box,
 .form_box {
   flex-direction: column;
 }
 
 section {
-  height: 1000px;
+  height: 1200px;
   width: 100%;
   padding-top: 50px;
 }
 
-.subscribe_h2 {
+.apply_h2 {
   padding: 20px 0 20px 0;
+  font-size: 25px;
 }
 
-.subscribe_img {
+.apply_img {
   width: 250px;
   height: 250px;
   margin: 10px 0 10px 0;
   border-radius: 50%;
 }
 
-.subscribe_wrapper {
+.apply_wrapper {
   width: 90%;
 }
 
-.subscribe_title,
-.subscribe_container,
+.apply_title,
+.apply_container,
 .img-box,
 .form_box {
   width: 100%;
@@ -76,35 +80,35 @@ form {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+textarea,
+input[type="file"] {
   width: 100%;
   margin-top: 5px;
   margin: 5px auto 15px auto;
   padding: 12px 0 12px 8px;
   border: none;
-  display: inline-block;
+  //   display: inline-block;
   box-sizing: border-box;
   z-index: 0;
 }
 
-input {
+.button_apply {
   width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.button_subscribe,
+.button_apply,
 .button_cancel {
   padding: 15px 0 15px 0;
   border: none;
   border-radius: 50px;
 }
 
-.button_subscribe:hover,
+.button_apply:hover,
 .button_cancel:hover {
   opacity: 0.5;
-}
-
-.span_connexion:hover {
-  text-decoration: underline;
 }
 
 @mixin media-max($_key) {
@@ -123,18 +127,13 @@ section {
       align-items: center;
     }
 
-    .button_cancel,
-    .span_connexion {
+    .button_cancel {
       margin-right: auto;
       margin-left: auto;
     }
 
     .button_cancel {
       width: 70%;
-    }
-
-    .span_connexion {
-      margin-bottom: 20px;
     }
   }
 }
@@ -149,36 +148,33 @@ section {
 
 section {
   @include media-min("phone") {
-    .subscribe_h2 {
+    height: 1350px;
+
+    .apply_h2 {
       font-size: 45px;
     }
 
-    .subscribe_img {
+    .apply_img {
       width: 300px;
       height: 300px;
     }
 
     .button_cancel {
-      margin-left: 50px;
       width: 100px;
-    }
-
-    .span_connexion {
-      width: 140px;
-      margin-right: 20px;
     }
   }
 }
 
 section {
   @include media-min("tablet") {
-    height: 1200px;
+    height: 1400px;
+    padding-top: 100px;
 
-    .subscribe_h2 {
+    .apply_h2 {
       font-size: 50px;
     }
 
-    .subscribe_img {
+    .apply_img {
       width: 400px;
       height: 400px;
     }
@@ -187,14 +183,13 @@ section {
 
 section {
   @include media-min("tablet-large") {
-    height: 1200px;
-    padding-top: 100px;
+    padding-top: 150px;
 
-    .subscribe_wrapper {
+    .apply_wrapper {
       max-width: 750px;
     }
 
-    .subscribe_img {
+    .apply_img {
       width: 450px;
       height: 400px;
     }
