--- a/templates/Login/subscribe.html.twig
+++ b/templates/Login/subscribe.html.twig
@@ -11,7 +11,7 @@
         <a class="key_ftdw" href="">Formations</a>
     </li>
     <li class="hd-li left font-f1">
-        <a class="key_ftdw" href="">Postuler</a>             
+        <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
     </li>
     <li class="hd-li right font-f1">
         <a class="key_ftdw" href="">Contact</a>   
@@ -33,7 +33,7 @@
             </div>
             <div class="subscribe_container key_bg1">
                 <div class="img-box">
-                    <img class ="subscribe_img" src="{{ asset('assets/storage/image/astronaut-subscribe.png') }}" alt="">
+                    <img class ="subscribe_img" src="{{ asset('assets/storage/image/astronaut-subscribe.png') }}" alt="astronaut inviting you">
                 </div>
                 <div class="form_box key_bg3">
                     <form action="" method="post">
