--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
         <a class="key_ftdw" href="">Formations</a>
     </li>
     <li class="hd-li left font-f1">
-        <a class="key_ftdw" href="">Postuler</a>             
+        <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
     </li>
     <li class="hd-li right font-f1">
         <a class="key_ftdw" href="">Contact</a>   
