--- a/templates/Login/apply.html.twig
+++ b/templates/Login/apply.html.twig
@@ -14,7 +14,7 @@
         <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
     </li>
     <li class="hd-li right font-f1">
-        <a class="key_ftdw" href="">Contact</a>   
+        <a class="key_ftdw" href="{{path('contact')}}">Contact</a>   
     </li>
     <li class="hd-li hd_home-li left font-f1 key_bg3">
         <a class="nav_a key_ftdw" href="{{path('subscribe')}}">S'incrire</a>           
