--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -15,7 +15,7 @@
         <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
     </li>
     <li class="hd-li right font-f1">
-        <a class="key_ftdw" href="">Contact</a>   
+        <a class="key_ftdw" href="{{path('contact')}}">Contact</a>   
     </li>
     <li class="hd-li hd_home-li left font-f1 key_bg3">
         <a class="nav_a key_ftdw" href="{{path('subscribe')}}">S'incrire</a>           
@@ -34,7 +34,7 @@
                     <h3 class="home_head-h3 font-f2">EcoWebLearning</h3>
                 </div>
                 <div class="home_head-imgbox">
-                    <img class="home_img1" src="{{ asset('assets/storage/image/greenRocket.png') }}" alt="">
+                    <img class="home_img1" src="{{ asset('assets/storage/image/greenRocket.png') }}" alt="greenRocket">
                 </div>
             </div>
 
