Add formation mobile style

--- a/public/assets/scss/color.scss
+++ b/public/assets/scss/color.scss
@@ -134,6 +134,10 @@ $colorGreen: #448d1a;
   border: var(--bg-key2);
 }
 
+.preview_button {
+  border: 2px solid var(--bg-key2);
+}
+
 .home_li-img {
   border: 2px solid var(--bg-darkwhite);
 }
