--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -8,9 +8,27 @@
         <div class="ft_main">
             <div class="ft_main-contain">
                 <ul class="ft_listlogo">
-                    <li><a href="#"><img class="ft_otherlogo" src="{{ asset('assets/storage/logo/facebookNoir.png') }}" alt="logo_Facebook"></a></li>
-                    <li><a href="#"><img class="ft_otherlogo" src="{{ asset('assets/storage/logo/twitterNoir.png') }}" alt="logo_twitter"></a></li>
-                    <li><a href="#"><img class="ft_otherlogo" src="{{ asset('assets/storage/logo/youtubeNoir.png') }}" alt="logo_youtube"></a></li>
+                    <li>
+                        <a href="#"><img class="ft_otherlogo" 
+                           src="{{ asset('assets/storage/logo/facebookNoir.png') }}" 
+                           alt="logo_Facebook" 
+                           title="Facebook icônes créées par riajulislam - Flaticon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="ft_otherlogo" 
+                           src="{{ asset('assets/storage/logo/twitterNoir.png') }}" 
+                           alt="logo_twitter"
+                           title="Badge social twitter icônes créées par Freepik - Flaticon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#"><img class="ft_otherlogo" 
+                           src="{{ asset('assets/storage/logo/youtubeNoir.png') }}" 
+                           alt="logo_youtube"
+                           title="Youtube icônes créées par Freepik - Flaticon">
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="ft_main-contain ft_main-contains">
@@ -22,7 +40,10 @@
             </div>
         </div>
         <div class="ft_legs">
-            <img class="ft_imgcertification" src="{{ asset('assets/storage/image/certification.png') }}" alt="Certification Qualité">
+            <img class="ft_imgcertification" 
+                 src="{{ asset('assets/storage/image/certification.png') }}" 
+                 alt="Certification Qualité"
+                 title="https://www.freepng.fr">
             <p class="ft_p font-f3">Certification Qualité</p>
         </div>
     </div>
