--- a/public/assets/scss/txt.scss
+++ b/public/assets/scss/txt.scss
@@ -91,7 +91,8 @@ $fontText: "Raleway", sans-serif;
 .home_partner-title,
 .login_h2,
 .subscribe_h2,
-.apply_h2 {
+.apply_h2,
+.formation_h2 {
   font-size: $fontSize_md;
 }
 
