--- a/templates/Login/subscribe.html.twig
+++ b/templates/Login/subscribe.html.twig
@@ -8,7 +8,7 @@
 {% block navlist %}
     <li class="hd-li1"></li>
     <li class="hd-li right font-f1">
-        <a class="key_ftdw" href="">Formations</a>
+        <a class="key_ftdw" href="{{path('formation')}}">Formations</a>
     </li>
     <li class="hd-li left font-f1">
         <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
@@ -33,7 +33,10 @@
             </div>
             <div class="subscribe_container key_bg1">
                 <div class="img-box">
-                    <img class ="subscribe_img" src="{{ asset('assets/storage/image/astronaut-subscribe.png') }}" alt="astronaut inviting you">
+                    <img class ="subscribe_img" 
+                         src="{{ asset('assets/storage/image/astronaut-subscribe.png') }}" 
+                         alt="astronaut inviting you"
+                         title="title="https://www.freepng.fr"">
                 </div>
                 <div class="form_box key_bg3">
                     <form action="" method="post">
