--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -9,7 +9,7 @@
 {% block navlist %}
     <li class="hd-li1"></li>
     <li class="hd-li right font-f1">
-        <a class="key_ftdw" href="">Formations</a>
+        <a class="key_ftdw" href="{{path('formation')}}">Formations</a>
     </li>
     <li class="hd-li left font-f1">
         <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
@@ -34,7 +34,10 @@
                     <h3 class="home_head-h3 font-f2">EcoWebLearning</h3>
                 </div>
                 <div class="home_head-imgbox">
-                    <img class="home_img1" src="{{ asset('assets/storage/image/greenRocket.png') }}" alt="greenRocket">
+                    <img class="home_img1" 
+                         src="{{ asset('assets/storage/image/greenRocket.png') }}" 
+                         alt="greenRocket"
+                         title="https://www.freepng.fr">
                 </div>
             </div>
 
@@ -60,7 +63,10 @@
                     {# <div class="home_article-imgbox"> #}
                     {# </div> #}
                     <div class="home_article-title article-h3">
-                        <img class="home_article-img" src="{{ asset('assets/storage/image/lowpolyEarth.png') }}" alt="lowpoly-Earth">
+                        <img class="home_article-img" 
+                             src="{{ asset('assets/storage/image/lowpolyEarth.png') }}" 
+                             alt="lowpoly-Earth"
+                             title="https://www.freepng.fr">
                         <h3 class="home_article-h  font-f1 key_ftdw">Nos objectifs</h3>
                     </div>
                     <div class="home_article-wrap ">
@@ -94,7 +100,9 @@
         
         <aside>
             <div class="img_box-lesson">
-                <img src="{{ asset('assets/storage/image/astronaut.png') }}" alt="Train">
+                <img src="{{ asset('assets/storage/image/astronaut.png') }}" 
+                     alt="Train"
+                     title="https://www.freepng.fr">
             </div>
             <div class="aside-wrapper key_bg3">
                 <div class="home_aside-title">
@@ -186,7 +194,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/goodEarth.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_goodEarth"
+                             title="Respectueux de la nature icônes créées par Freepik - Flaticon">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">GoodEarth</h3>
                 </li>
@@ -194,7 +203,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/montagne.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Venture"
+                             title="icon by: https://icons8.com/icon/65471/montagne">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">Venture</h3>
                 </li>
@@ -202,7 +212,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/peking-duck.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_meatMe"
+                             title="Peking duck icons created by surang - Flaticon">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">meatMe</h3>
                 </li>
@@ -214,7 +225,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/pieds.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Mankind"
+                             title="icon by : https://icons8.com/icon/17598/empreintes-pieds-humains">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">Mankind</h3>
                 </li>
@@ -222,7 +234,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/ours.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Oursar"
+                             title="Ours icônes créées par Freepik - Flaticon">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">Oursar</h3>
                 </li>
@@ -230,7 +243,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/crabe.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Scrab"
+                             title="icon by : https://icons8.com/icon/82021/crabe">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">Scrab</h3>
                 </li>
@@ -242,7 +256,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/fallen.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Fallen"
+                             title="icon by : https://icons8.com/icon/F283aUz0gLiM/fallen-leaf">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">Fallen</h3>
                 </li>
@@ -250,7 +265,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/bambou.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Stabilize"
+                             title="icon by : https://icons8.com/icon/36977/bambou">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">Stabilize</h3>
                 </li>
@@ -258,7 +274,8 @@
                     <a href="#">
                         <img class="home_partnerlogo" 
                              src="{{ asset('assets/storage/logo/canard.png') }}" 
-                             alt="logo_Facebook">
+                             alt="logo_Facebook"
+                             title="Canard icônes créées par Freepik - Flaticon">
                     </a>
                     <h3 class="home_partner-h3 key_ftdw font-f1">DuckLog</h3>
                 </li>
