--- a/public/assets/pages/formations_student.scss
+++ b/public/assets/pages/formations_student.scss
@@ -138,7 +138,18 @@ $breakpoints: (
     height: 150px;
     width: 100%;
     box-shadow: 1px 1px 6px #000;
-    cursor: pointer;
+    // cursor: pointer;
+  }
+
+  .formation_a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
   }
 
   .formation_title {
@@ -177,6 +188,7 @@ $breakpoints: (
     box-shadow: 1px 1px 6px #000;
     // cursor: pointer;
     border: none;
+    z-index: 2;
   }
 
   .preview_box {
