--- a/public/assets/scss/txt.scss
+++ b/public/assets/scss/txt.scss
@@ -91,8 +91,7 @@ $fontText: "Raleway", sans-serif;
 .home_partner-title,
 .login_h2,
 .subscribe_h2,
-.apply_h2,
-.formation_h2 {
+.apply_h2 {
   font-size: $fontSize_md;
 }
 
@@ -106,7 +105,8 @@ $fontText: "Raleway", sans-serif;
 .home_article-h,
 .home_li-h2,
 .ft-listtext a,
-.ft-p {
+.ft-p,
+.formation_h3 {
   font-size: $fontSize_sm1;
 }
 
