--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,26 +34,7 @@
 <body class="light theme-light key_bgwd key_ftdw">
     
     <header class="key_bg1 z5">
-        <div class="hd-head">
-            <div class="hd-title">
-                <h1 class="font-f1 key_ftdw">Eco-Tech Eco-Web</h1>
-                <h2 class="font-f1 key_ftdw">Les solutions web-écologique</h2>
-            </div>
-            <div class="hd_logobox key_bg3">
-               <a href="{{path('home')}}"><img class="hd_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo-ecoIt"></a> 
-            </div>
-        </div>
-        {% include "_modules/_switch.html.twig" %}
-        <nav class="hd-navdropdown">
-            <button onclick="dropdownMenu()" id="nav-btn" class="hd-navbtn key_bg2" style="background-color: #c7f9cc" />
-                <div class="hd-iconNav headNav-icon1 key_bgdw"></div>
-                <div class="hd-iconNav headNav-icon2 key_bgdw"></div>
-                <div class="hd-iconNav headNav-icon3 key_bgdw"></div>
-            </button>
-            <ul id="dropdown" class="hd-dropdownContent">
-                {% block navlist %}{% endblock %}
-            </ul>
-        </nav>
+        {% block header %}{% endblock %}
     </header>
 
 
