--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer class="key_bg2">
+    <footer class="key_bg2 key_ftdw">
         {% include "base/_footer.html.twig" %}
     </footer>
 
