--- a/templates/student/formation_student.html.twig
+++ b/templates/student/formation_student.html.twig
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block main %}
-    <section class="formation_section">
+    <section class="formation_section key_ftdw">
         <div class="formation_headsection">
-            <h2 class="formation_title key_ftdw font-f1">Titre de la formation</h2>
+            <h2 class="formation_title font-f1">Titre de la formation</h2>
             <img class="formation_sectionImg" 
                  src="{{ asset('assets/storage/image/astro-outer-space.png') }}" 
                  alt="space"
@@ -22,29 +22,29 @@
             <div class="lesson_displayside">
                 <div class="lesson_headbox key_bg1">
                     <div class="section_titlebox">
-                        <h3 class="section_title key_ftdw font-f1">Titre de la section</h3>
+                        <h3 class="section_title font-f1">Titre de la section</h3>
                     </div>
                     <div class="span_authorbox">
-                        <span class="span_author key_ftdw">Auteur: quelqu'un d'autre</span>
+                        <span class="span_author font-f3">Auteur: quelqu'un d'autre</span>
                     </div>
                 </div>
                 <article class="lesson_article key_bg2">
-                    <h2 class="lesson_title key_ftdw font-f1">Titre de la leçon</h2>
+                    <h2 class="lesson_title font-f2">Titre de la leçon</h2>
                 </article>
             </div>
             <div class="sections_side">
                 <div class="sections_wrapper">
                     <div class="formations_sections">
-                        <button class="section_button key_bg2" onclick="dropdownLessons()">
-                            <h3 class="section_h3 key_ftdw font-f1">Titre de le section</h3>
+                        <button class="section_button key_bg2 key_ftdw" onclick="dropdownLessons()">
+                            <h3 class="section_h3 font-f1">Titre de le section</h3>
                             <img class="section_buttonImg key_bg1"  
                                 src="{{ asset('assets/storage/icons/gearPlanet.png') }}" 
                                 alt="rouages planète"
                                 title="icon by : https://icons8.com/icon/Qw0j4GWR9BWJ/gear">
                         </button>
                         <div class="formation_lesson" id="lessons_dropdown">
-                            <button class="lesson_button key_bg1">
-                                <h3 class="lesson_h3 key_ftdw font-f3">Titre de la leçon</h3>
+                            <button class="lesson_button key_bg1 key_ftdw">
+                                <h3 class="lesson_h3 font-f2">Titre de la leçon</h3>
                                 <img class="lesson_buttonImg"  
                                     src="{{ asset('assets/storage/icons/leaf.png') }}" 
                                     alt="feuille"
