Add contact & apply student page  && route

--- a/templates/student/_header_student.html.twig
+++ b/templates/student/_header_student.html.twig
@@ -20,10 +20,10 @@
             <a class="key_ftdw" href="{{path('student_formations')}}">Formations</a>
         </li>
         <li class="hd-li left font-f1">
-            <a class="key_ftdw" href="{{path('apply')}}">Postuler</a>             
+            <a class="key_ftdw" href="{{path('student_apply')}}">Postuler</a>             
         </li>
         <li class="hd-li right font-f1">
-            <a class="key_ftdw" href="{{path('contact')}}">Contact</a>   
+            <a class="key_ftdw" href="{{path('student_contact')}}">Contact</a>   
         </li>
         <li class="hd-li hd_home-li left font-f1 key_bg3">
             <a class="nav_a key_ftdw" href="{{path('subscribe')}}">S'incrire</a>           
