--- a/templates/student/home_student.html.twig
+++ b/templates/student/home_student.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block header %}
-    {% include "base/_header_student.html.twig" %}
+    {% include "student/_header_student.html.twig" %}
 {% endblock %}
 
 {% block main %}
