--- a/templates/student/formation_student.html.twig
+++ b/templates/student/formation_student.html.twig
@@ -30,6 +30,14 @@
                 </div>
                 <article class="lesson_article key_bg2">
                     <h2 class="lesson_title font-f2">Titre de la leçon</h2>
+                    <div class="lesson_videoBox">
+                        <iframe class="lesson_video" 
+                                src="https://www.youtube.com/embed/6YMRB4bgQ-o" 
+                                title="YouTube video player" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; 
+                                encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                    </div>
                 </article>
             </div>
             <div class="sections_side">
