--- a/public/assets/scss/color.scss
+++ b/public/assets/scss/color.scss
@@ -13,6 +13,7 @@ $colorLight2: #80ed99;
 $colorLight3: #57cc99;
 $colorDark1: #38a3a5;
 $colorDark2: #22577a;
+$colorDark3: #143246;
 $colorDark: #0e0101;
 $colorWhite: #edf6f9;
 $colorRed: #af3838;
